add local storage

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <p class="text-gray-600 mb-4">Responsive personal portfolio using modern web technologies</p>
                     <div class="flex space-x-4">
                         <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Project</a>
-                        <a href="#" class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300">GitHub</a>
+                        <a href="https://github.com/Anilmekala54/my-portfolio.git" class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300">GitHub</a>
                     </div>
                 </div>
             </div>
