--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                     <p class="text-gray-600 mb-4">Efficient food order management with instant updates</p>
 
                     <div class="flex space-x-4">
-                        <a href="restaurant2566.web.app" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Project</a>
+                        <a href="https://restaurant2566.web.app/" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Project</a>
                         <a href="https://github.com/Arvindkumar2566/restaurents-project.git" class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300">GitHub</a>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     <h3 class="text-xl font-semibold mb-2">Portfolio Website</h3>
                     <p class="text-gray-600 mb-4">Responsive personal portfolio using modern web technologies</p>
                     <div class="flex space-x-4">
-                        <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Project</a>
+                        <a href="https://my-portfolio-afa46.web.app/" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Project</a>
                         <a href="https://github.com/Anilmekala54/my-portfolio.git" class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300">GitHub</a>
                     </div>
                 </div>
